<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgreen"
    android:orientation="vertical"
    android:padding="20sp">

    <ImageView
        android:layout_width="150sp"
        android:layout_height="250sp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/startup_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.LeARn.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="2sp"
            app:endIconTint="@color/lightgreen"
            app:startIconDrawable="@drawable/ic_account_box_black_18dp"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_email"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.LeARn.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="2sp"
            app:endIconTint="@color/lightgreen"

            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24px"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:id="@+id/login_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:text="@string/btn_forgotpass"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/btn_login"
            android:textColor="#fff" />

        <Button
            android:id="@+id/button_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#00000000"
            android:text="@string/btn_registration"
            android:textColor="@color/black" />
        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>


